--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -79,7 +79,7 @@ jobs:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
     env:
       POLYCLI_VERSION: v0.1.84
-      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref || 'main' }}
+      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref || 'jihwan/multi-chain-bridge-workflow' }}
       KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref  || 'jhilliard/aggsender-validator-committee' }}
       KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name || 'cdk' }}
     #   DEFAULT_L2_CLIENT: ${{ inputs.stack }}
@@ -204,29 +204,43 @@ jobs:
 
       - name: Validate test file existence
         run: |
-          testfile="agglayer-e2e/${{ matrix.testfile }}"
+          pushd agglayer-e2e || exit 1
+
+          testfile="${{ matrix.testfile }}"
           if [[ ! -f "$testfile" ]]; then
             echo "Test file $testfile does not exist"
             exit 1
           fi
 
+          popd
+
       - name: Run e2e tests
         run: |
           pushd agglayer-e2e || exit 1
                     
+          export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
           export NETWORK_TARGET=network1
+          export CLAIM_WAIT_DURATION=30m
           bats ./tests/lxly/multi-chain-bridge.bats
 
+          export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
           export NETWORK_TARGET=network2
+          export CLAIM_WAIT_DURATION=30m
           bats ./tests/lxly/multi-chain-bridge.bats
 
+          export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
           export NETWORK_TARGET=network3
+          export CLAIM_WAIT_DURATION=30m
           bats ./tests/lxly/multi-chain-bridge.bats
 
+          # export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
           # export NETWORK_TARGET=network4
+          # export CLAIM_WAIT_DURATION=30m
           # bats ./tests/lxly/multi-chain-bridge.bats
 
+          # export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
           # export NETWORK_TARGET=network5
+          # export CLAIM_WAIT_DURATION=30m
           # bats ./tests/lxly/multi-chain-bridge.bats
 
           popd
