--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -33,7 +33,7 @@ jobs:
             CHANGED_FILES=$(git diff --name-only --diff-filter=AM HEAD^ HEAD | grep -E '\.(sh|bash|bats)$' || true)
             if [[ -n "$CHANGED_FILES" ]]; then
             echo "Checking files: $CHANGED_FILES"
-            echo "$CHANGED_FILES" | xargs -r shellcheck -s bash -S warning
+            echo "$CHANGED_FILES" | xargs -r shellcheck -x -s bash -S warning
             else
             echo "No .sh or .bash files changed in this commit or PR."
             fi
