--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -192,7 +192,7 @@ jobs:
 
             kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=/tmp/op-geth/sovereign.yml .
             kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=/tmp/op-geth/aggchain-ecdsa-multisig.yml .
-            # kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=/tmp/cdk-erigon/sovereign.yml .
+            kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=/tmp/cdk-erigon/sovereign.yml .
             # kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=/tmp/cdk-erigon/rollup.yml .
             # kurtosis run --enclave ${{ env.KURTOSIS_ENCLAVE_NAME }} --args-file=/tmp/cdk-erigon/validium.yml .
 
@@ -228,10 +228,10 @@ jobs:
           export CLAIM_WAIT_DURATION=60m
           bats ./tests/lxly/multi-chain-bridge.bats
 
-          # export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
-          # export NETWORK_TARGET=network3
-          # export CLAIM_WAIT_DURATION=60m
-          # bats ./tests/lxly/multi-chain-bridge.bats
+          export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
+          export NETWORK_TARGET=network3
+          export CLAIM_WAIT_DURATION=60m
+          bats ./tests/lxly/multi-chain-bridge.bats
 
           # export ENCLAVE_NAME=${{ env.KURTOSIS_ENCLAVE_NAME }}
           # export NETWORK_TARGET=network4
@@ -244,11 +244,3 @@ jobs:
           # bats ./tests/lxly/multi-chain-bridge.bats
 
           popd
-
-      - name: Post kurtosis run
-        if: always()
-        uses: ./kurtosis-cdk/.github/actions/kurtosis-post-run
-        with:
-          enclave_name: ${{ env.KURTOSIS_ENCLAVE_NAME }}
-          args_filename: multi-chain-bridge
-          retention-days: 1
