feat: add L2<->L2 bridging
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -239,10 +239,10 @@ jobs:
           export CLAIM_WAIT_DURATION=60m
           bats ./tests/lxly/multi-chain-bridge.bats
 
-          # export ENCLAVE_NAME=cdk
-          # export NETWORK_TARGET=network3
-          # export CLAIM_WAIT_DURATION=60m
-          # bats ./tests/lxly/multi-chain-bridge.bats
+          export ENCLAVE_NAME=cdk
+          export NETWORK_TARGET=network3
+          export CLAIM_WAIT_DURATION=60m
+          bats ./tests/lxly/multi-chain-bridge.bats
 
           # export ENCLAVE_NAME=cdk
           # export NETWORK_TARGET=network4
