--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -211,6 +211,7 @@ jobs:
         run: |
           pushd agglayer-e2e || exit 1
 
+          export L1_PRIVATE_KEY=0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625
           export ENCLAVE_NAME=cdk
           export NETWORK_TARGET=network1
           export CLAIM_WAIT_DURATION=10m
