feat: enable more multinetwork bridging
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -217,9 +217,9 @@ jobs:
           export CLAIM_WAIT_DURATION=10m
           bats ./tests/lxly/multi-chain-bridge.bats
 
-          # export ENCLAVE_NAME=cdk
-          # export NETWORK_TARGET=network2
-          # export CLAIM_WAIT_DURATION=10m
-          # bats ./tests/lxly/multi-chain-bridge.bats
+          export ENCLAVE_NAME=cdk
+          export NETWORK_TARGET=network2
+          export CLAIM_WAIT_DURATION=10m
+          bats ./tests/lxly/multi-chain-bridge.bats
 
           popd
