--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -217,6 +217,7 @@ jobs:
           export CLAIM_WAIT_DURATION=10m
           bats ./tests/lxly/multi-chain-bridge.bats
 
+          export L1_PRIVATE_KEY=0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625
           export ENCLAVE_NAME=cdk
           export NETWORK_TARGET=network2
           export CLAIM_WAIT_DURATION=10m
