!feat: disable nightly battery tests
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/standard-battery-tests-nightly-rpc.yml
+++ b/.github/workflows/standard-battery-tests-nightly-rpc.yml
@@ -3,9 +3,9 @@
 name: Standard Battery Tests - RPC (Nightly)
 
 on:
-  schedule:
-    # Run at 5:00 AM UTC every day
-    - cron: '0 5 * * *'
+  # schedule:
+  #   # Run at 5:00 AM UTC every day
+  #   - cron: '0 5 * * *'
   workflow_dispatch:
     inputs:
       agglayer-e2e-ref:
