--- a/.github/workflows/standard-battery-tests-nightly-kurtosis.yml
+++ b/.github/workflows/standard-battery-tests-nightly-kurtosis.yml
@@ -1,9 +1,9 @@
 name: Standard Battery Tests - Kurtosis (Nightly)
 
 on:
-  schedule:
-    # Run at 00:00 AM UTC every day
-    - cron: '0 0 * * *'
+  # schedule:
+  #   # Run at 00:00 AM UTC every day
+  #   - cron: '0 0 * * *'
   workflow_dispatch:
     inputs:
       agglayer-e2e-ref:
