--- a/.github/workflows/standard-battery-tests-nightly-rpc.yml
+++ b/.github/workflows/standard-battery-tests-nightly-rpc.yml
@@ -1,5 +1,4 @@
 # Make sure to configure the agglayer/e2e Github Secrets before running this test
-# The tests target cardona-37 and bali-35 networks.
 name: Standard Battery Tests - RPC (Nightly)
 
 on:
@@ -63,12 +62,12 @@ jobs:
       max-parallel: ${{ fromJson(inputs.max-parallel-runs || '1') }}
       matrix:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
-        target-network: ["cardona-37", "bali-35", "bali-44"]
+        target-network: ["bali-54"]
     env:
       POLYCLI_VERSION: v0.1.84
       AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref || 'main' }}
       L1_RPC_ENDPOINT: ${{ secrets.L1_RPC_ENDPOINT }}
-      L2_RPC_ENDPOINT: ${{ matrix.target-network == 'cardona-37' && secrets.L2_CARDONA_37_RPC_ENDPOINT || matrix.target-network == 'bali-35' && secrets.L2_BALI_35_RPC_ENDPOINT || secrets.L2_BALI_44_RPC_ENDPOINT }}
+      L2_RPC_ENDPOINT: ${{ matrix.target-network == 'bali-54' && secrets.L2_BALI_54_RPC_ENDPOINT }}
       L1_FUNDED_PRIVATE_KEY: ${{ secrets.L1_FUNDED_PRIVATE_KEY }}
       L2_FUNDED_PRIVATE_KEY: ${{ secrets.L2_FUNDED_PRIVATE_KEY }}
       TARGET_NETWORK: ${{ matrix.target-network }}
@@ -133,12 +132,8 @@ jobs:
       - name: Validate RPC Endpoint
         run: |
           cast chain-id --rpc-url ${{ secrets.L1_RPC_ENDPOINT }}
-          if [[ "${{ matrix.target-network }}" == "cardona-37" ]]; then
-            cast chain-id --rpc-url ${{ secrets.L2_CARDONA_37_RPC_ENDPOINT }}
-          elif [[ "${{ matrix.target-network }}" == "bali-35" ]]; then
-            cast chain-id --rpc-url ${{ secrets.L2_BALI_35_RPC_ENDPOINT }}
-          elif [[ "${{ matrix.target-network }}" == "bali-44" ]]; then
-            cast chain-id --rpc-url ${{ secrets.L2_BALI_44_RPC_ENDPOINT }}
+          if [[ "${{ matrix.target-network }}" == "bali-54" ]]; then
+            cast chain-id --rpc-url ${{ secrets.L2_BALI_54_RPC_ENDPOINT }}
           fi
 
       - name: Validate test file existence
@@ -154,26 +149,14 @@ jobs:
           pushd agglayer-e2e || exit 1
 
           # Load public environment variables based on target network
-          if [[ "${{ matrix.target-network }}" == "cardona-37" ]]; then
-            if [[ -f "tests/lxly/networks/cardona-37.env" ]]; then
+          if [[ "${{ matrix.target-network }}" == "bali-54" ]]; then
+            if [[ -f "tests/lxly/networks/bali-54.env" ]]; then
               set -a
-              source tests/lxly/networks/cardona-37.env
-              set +a
-            fi
-          elif [[ "${{ matrix.target-network }}" == "bali-35" ]]; then
-            if [[ -f "tests/lxly/networks/bali-35.env" ]]; then
-              set -a
-              source tests/lxly/networks/bali-35.env
-              set +a
-            fi
-          elif [[ "${{ matrix.target-network }}" == "bali-44" ]]; then
-            if [[ -f "tests/lxly/networks/bali-44.env" ]]; then
-              set -a
-              source tests/lxly/networks/bali-44.env
+              source tests/lxly/networks/bali-54.env
               set +a
             fi
           else
-            echo "Invalid target network detected: ${{ matrix.target-network }}. Expected 'cardona-37', 'bali-35', or 'bali-44'."
+            echo "Invalid target network detected: ${{ matrix.target-network }}. Expected 'bali-54'."
             exit 1
           fi
 
