--- a/scenarios/upgradeV12/fep.yml
+++ b/scenarios/upgradeV12/fep.yml
@@ -51,8 +51,7 @@ args:
   # Note this will noticeably increase the deployment time because of the increased L1 finality.
   l1_seconds_per_slot: 6
 
-  # Looks like we need the bridge for newer version for port 5577 to work after upgrade
-  aggkit_components: "aggsender,aggoracle,bridge"
+  zkevm_path_rw_data: "/tmp"
 
 
 optimism_package:
