--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -137,13 +137,22 @@ jobs:
           echo '${{ inputs.kurtosis-cdk-args }}'
           echo '${{ inputs.kurtosis-cdk-args }}' | jq --arg img '${{ inputs.docker-image-override }}' --arg tag '${{ inputs.docker-tag }}' '.args[$img] = $tag' | tee /tmp/kurtosis-args.json
 
-      
-
       - name: Startup the kurtosis-cdk package
         run: |
           pushd kurtosis-cdk || exit 1
           kurtosis run --enclave '${{ inputs.kurtosis-cdk-enclave-name }}' --args-file /tmp/kurtosis-args.json .
           popd
+
+      - name: Print container sizes before tests
+        run: |
+          echo "📦 Docker container sizes before tests:"
+          printf "%-15s %-20s %-30s\n" "SizeRw(Bytes)" "SizeRootFs(Bytes)" "Name"
+          echo "-----------------------------------------------------------------------"
+          docker container ls --format json \
+            | jq -r '.ID' \
+            | xargs -I xxx docker container inspect --size -f '{{ .SizeRw }} {{ .SizeRootFs }} {{ .Name }}' xxx \
+            | awk '{printf "%-15s %-20s %-30s\n", $1, $2, $3}' \
+            || echo "⚠️ No containers found or inspect failed"
 
       - name: Run e2e tests
         run: |
@@ -187,6 +196,18 @@ jobs:
             fi
           fi
           popd
+
+      - name: Print container sizes after tests
+        if: always()
+        run: |
+          echo "📦 Docker container sizes after tests:"
+          printf "%-15s %-20s %-30s\n" "SizeRw(Bytes)" "SizeRootFs(Bytes)" "Name"
+          echo "-----------------------------------------------------------------------"
+          docker container ls --format json \
+            | jq -r '.ID' \
+            | xargs -I xxx docker container inspect --size -f '{{ .SizeRw }} {{ .SizeRootFs }} {{ .Name }}' xxx \
+            | awk '{printf "%-15s %-20s %-30s\n", $1, $2, $3}' \
+            || echo "⚠️ No containers found or inspect failed"
 
       - name: Dump enclave logs
         if: ${{ failure() }}
