--- a/scenarios/agglayer-upgrade-with-supplied-version/assets/erigon-sovereign.yml
+++ b/scenarios/agglayer-upgrade-with-supplied-version/assets/erigon-sovereign.yml
@@ -9,7 +9,8 @@ args:
   sequencer_type: erigon
   consensus_contract_type: pessimistic
 
-  aggkit_image: ghcr.io/agglayer/aggkit:0.5.0-beta4
+  # aggkit_image: ghcr.io/agglayer/aggkit:0.5.0-beta4
+  aggkit_image: ghcr.io/agglayer/aggkit:0.7.0-beta6
   zkevm_prover_image: hermeznetwork/zkevm-prover:v8.0.0-RC16-fork.12
   cdk_erigon_node_image: hermeznetwork/cdk-erigon:v2.63.0-rc4
 
@@ -22,5 +23,5 @@ args:
   aggkit_components: aggsender,bridge
 
   zkevm_rollup_chain_id: 2151910
-  deployment_suffix: "-003" 
+  deployment_suffix: "-003"
   zkevm_rollup_id: 3
