--- a/scenarios/agglayer-upgrade-with-supplied-version/assets/opgeth-ecdsa.yml
+++ b/scenarios/agglayer-upgrade-with-supplied-version/assets/opgeth-ecdsa.yml
@@ -5,10 +5,12 @@ deployment_stages:
   deploy_op_succinct: false
 
 args:
-  aggkit_image: "ghcr.io/agglayer/aggkit:0.7.0-beta3"  # https://github.com/agglayer/aggkit/tree/v0.7.0-beta3
+  # aggkit_image: "ghcr.io/agglayer/aggkit:0.7.0-beta3"  # https://github.com/agglayer/aggkit/tree/v0.7.0-beta3
+  aggkit_image: "ghcr.io/agglayer/aggkit:0.7.0-beta6" 
   # Agghcain ecdsa_multisig consensus.
   consensus_contract_type: ecdsa_multisig
   use_agg_sender_validator: True
+  aggkit_prover_primary_prover: "mock-prover"
   # The below parameter will be used for aggsender multisig to have "agg_sender_validator_total_number" aggsender validators.
   agg_sender_validator_total_number: 1
   agg_sender_multisig_threshold: 1
