--- a/.github/workflows/standard-battery-tests-nightly-rpc.yml
+++ b/.github/workflows/standard-battery-tests-nightly-rpc.yml
@@ -63,12 +63,12 @@ jobs:
       max-parallel: ${{ fromJson(inputs.max-parallel-runs || '1') }}
       matrix:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
-        target-network: ["bali-01","bali-54","bali-52","bali-49","bali-57"]
+        target-network: ["bali-01","bali-37","bali-48","bali-49","bali-52","bali-57"]
     env:
       POLYCLI_VERSION: v0.1.84
       AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref || 'main' }}
       L1_RPC_ENDPOINT: ${{ secrets.L1_RPC_ENDPOINT }}
-      L2_RPC_ENDPOINT: ${{ matrix.target-network == 'bali-01' && secrets.L2_BALI_01_RPC_ENDPOINT || matrix.target-network == 'bali-54' && secrets.L2_BALI_54_RPC_ENDPOINT || matrix.target-network == 'bali-52' && secrets.L2_BALI_52_RPC_ENDPOINT || matrix.target-network == 'bali-49' && secrets.L2_BALI_49_RPC_ENDPOINT || matrix.target-network == 'bali-57' && secrets.L2_BALI_57_RPC_ENDPOINT}}
+      L2_RPC_ENDPOINT: ${{ matrix.target-network == 'bali-01' && secrets.L2_BALI_01_RPC_ENDPOINT || matrix.target-network == 'bali-37' && secrets.L2_BALI_37_RPC_ENDPOINT || matrix.target-network == 'bali-48' && secrets.L2_BALI_48_RPC_ENDPOINT || matrix.target-network == 'bali-52' && secrets.L2_BALI_52_RPC_ENDPOINT || matrix.target-network == 'bali-49' && secrets.L2_BALI_49_RPC_ENDPOINT || matrix.target-network == 'bali-57' && secrets.L2_BALI_57_RPC_ENDPOINT}}
       L1_FUNDED_PRIVATE_KEY: ${{ secrets.L1_FUNDED_PRIVATE_KEY }}
       L2_FUNDED_PRIVATE_KEY: ${{ secrets.L2_FUNDED_PRIVATE_KEY }}
       TARGET_NETWORK: ${{ matrix.target-network }}
@@ -133,9 +133,7 @@ jobs:
       - name: Validate RPC Endpoint
         run: |
           cast chain-id --rpc-url ${{ secrets.L1_RPC_ENDPOINT }}
-          if [[ "${{ matrix.target-network }}" == "bali-54" ]]; then
-            cast chain-id --rpc-url ${{ secrets.L2_BALI_54_RPC_ENDPOINT }}
-          elif [[ "${{ matrix.target-network }}" == "bali-52" ]]; then
+          if [[ "${{ matrix.target-network }}" == "bali-52" ]]; then
             cast chain-id --rpc-url ${{ secrets.L2_BALI_52_RPC_ENDPOINT }}
           elif [[ "${{ matrix.target-network }}" == "bali-57" ]]; then
             cast chain-id --rpc-url ${{ secrets.L2_BALI_57_RPC_ENDPOINT }}
@@ -143,6 +141,10 @@ jobs:
             cast chain-id --rpc-url ${{ secrets.L2_BALI_49_RPC_ENDPOINT }}
           elif [[ "${{ matrix.target-network }}" == "bali-01" ]]; then
             cast chain-id --rpc-url ${{ secrets.L2_BALI_01_RPC_ENDPOINT }}
+          elif [[ "${{ matrix.target-network }}" == "bali-37" ]]; then
+            cast chain-id --rpc-url ${{ secrets.L2_BALI_37_RPC_ENDPOINT }}
+          elif [[ "${{ matrix.target-network }}" == "bali-48" ]]; then
+            cast chain-id --rpc-url ${{ secrets.L2_BALI_48_RPC_ENDPOINT }}
           fi
 
       - name: Validate test file existence
