--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -163,10 +163,9 @@ jobs:
                    || exit 1
             fi
           else
-            bats ./tests/aggkit/bridge-e2e.bats \
-                 ./tests/aggkit/e2e-pp.bats \
-                 || exit 1
-
+            bats ./tests/aggkit/bridge-e2e.bats || exit 1
+            bats ./tests/aggkit/e2e-pp.bats || exit 1
+                 
             if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
               bats ./tests/aggkit/bridge-e2e-nightly.bats \
                    ./tests/aggkit/internal-claims.bats \
