--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -83,6 +83,17 @@ jobs:
           ref: ${{ inputs.kurtosis-cdk-ref }}
           path: kurtosis-cdk
 
+      - name: Free up disk space
+        uses: jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: false
+          docker-images: true
+          swap-storage: true
+
       - name: Download binary
         if: inputs.aggsender-find-imported-bridge-artifact != ''
         uses: actions/download-artifact@v4
@@ -132,6 +143,17 @@ jobs:
           kurtosis run --enclave '${{ inputs.kurtosis-cdk-enclave-name }}' --args-file /tmp/kurtosis-args.json .
           popd
 
+      - name: Print container sizes before tests
+        run: |
+          echo "📦 Docker container sizes before tests:"
+          printf "%-15s %-20s %-30s\n" "SizeRw(Bytes)" "SizeRootFs(Bytes)" "Name"
+          echo "-----------------------------------------------------------------------"
+          docker container ls --format json \
+            | jq -r '.ID' \
+            | xargs -I xxx docker container inspect --size -f '{{ .SizeRw }} {{ .SizeRootFs }} {{ .Name }}' xxx \
+            | awk '{printf "%-15s %-20s %-30s\n", $1, $2, $3}' \
+            || echo "⚠️ No containers found or inspect failed"
+
       - name: Run e2e tests
         run: |
           set -eo pipefail
@@ -174,6 +196,18 @@ jobs:
             fi
           fi
           popd
+
+      - name: Print container sizes after tests
+        if: always()
+        run: |
+          echo "📦 Docker container sizes after tests:"
+          printf "%-15s %-20s %-30s\n" "SizeRw(Bytes)" "SizeRootFs(Bytes)" "Name"
+          echo "-----------------------------------------------------------------------"
+          docker container ls --format json \
+            | jq -r '.ID' \
+            | xargs -I xxx docker container inspect --size -f '{{ .SizeRw }} {{ .SizeRootFs }} {{ .Name }}' xxx \
+            | awk '{printf "%-15s %-20s %-30s\n", $1, $2, $3}' \
+            || echo "⚠️ No containers found or inspect failed"
 
       - name: Dump enclave logs
         if: ${{ failure() }}
