--- a/.github/workflows/standard-battery-tests-nightly-rpc.yml
+++ b/.github/workflows/standard-battery-tests-nightly-rpc.yml
@@ -75,6 +75,7 @@ jobs:
       BALI_37_RPC_ENDPOINT: ${{ secrets.L2_BALI_37_RPC_ENDPOINT }}
       BALI_48_RPC_ENDPOINT: ${{ secrets.L2_BALI_48_RPC_ENDPOINT }}
       BALI_49_RPC_ENDPOINT: ${{ secrets.L2_BALI_49_RPC_ENDPOINT }}
+      BALI_52_RPC_ENDPOINT: ${{ secrets.L2_BALI_52_RPC_ENDPOINT }}
       BALI_57_RPC_ENDPOINT: ${{ secrets.L2_BALI_57_RPC_ENDPOINT }}
     steps:
       - name: Debug environment variables
@@ -157,7 +158,11 @@ jobs:
           echo "Validating Bali-49 endpoint..."
           cast chain-id --rpc-url ${{ secrets.L2_BALI_49_RPC_ENDPOINT }}
           echo "Bali-49 chain ID validation passed"
-          
+
+          echo "Validating Bali-52 endpoint..."
+          cast chain-id --rpc-url ${{ secrets.L2_BALI_52_RPC_ENDPOINT }}
+          echo "Bali-52 chain ID validation passed"
+
           echo "Validating Bali-57 endpoint..."
           cast chain-id --rpc-url ${{ secrets.L2_BALI_57_RPC_ENDPOINT }}
           echo "Bali-57 chain ID validation passed"
@@ -205,7 +210,10 @@ jobs:
           
           export BALI_NETWORK_49_RPC_URL="${{ env.BALI_49_RPC_ENDPOINT }}"
           export BALI_NETWORK_49_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
-          
+
+          export BALI_NETWORK_52_RPC_URL="${{ env.BALI_52_RPC_ENDPOINT }}"
+          export BALI_NETWORK_52_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
+
           export BALI_NETWORK_57_RPC_URL="${{ env.BALI_57_RPC_ENDPOINT }}"
           export BALI_NETWORK_57_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
 
@@ -231,6 +239,10 @@ jobs:
           echo "Bali-49 RPC URL: ${BALI_NETWORK_49_RPC_URL:0:20}..."
           echo "Bali-49 Bridge Address: $BALI_NETWORK_49_BRIDGE_ADDR"
           echo "Bali-49 Bridge Service: $BALI_NETWORK_49_BRIDGE_SERVICE_URL"
+
+          echo "Bali-52 RPC URL: ${BALI_NETWORK_52_RPC_URL:0:20}..."
+          echo "Bali-52 Bridge Address: $BALI_NETWORK_52_BRIDGE_ADDR"
+          echo "Bali-52 Bridge Service: $BALI_NETWORK_52_BRIDGE_SERVICE_URL"
           
           echo "Bali-57 RPC URL: ${BALI_NETWORK_57_RPC_URL:0:20}..."
           echo "Bali-57 Bridge Address: $BALI_NETWORK_57_BRIDGE_ADDR"
