--- a/tests/lxly/networks/bali-networks.env
+++ b/tests/lxly/networks/bali-networks.env
@@ -31,11 +31,11 @@ BALI_NETWORK_49_PRIVATE_KEY="<REDACTED>"
 BALI_NETWORK_49_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
 BALI_NETWORK_49_BRIDGE_SERVICE_URL="https://bridge.bali-49-erigon.dev.polygon"
 
-# BALI-54
-BALI_NETWORK_54_RPC_URL="<REDACTED>"
-BALI_NETWORK_54_PRIVATE_KEY="<REDACTED>"
-BALI_NETWORK_54_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
-BALI_NETWORK_54_BRIDGE_SERVICE_URL="https://bridge-api.zkevm-alpha.com"
+# BALI-52
+BALI_NETWORK_52_RPC_URL="<REDACTED>"
+BALI_NETWORK_52_PRIVATE_KEY="<REDACTED>"
+BALI_NETWORK_52_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
+BALI_NETWORK_52_BRIDGE_SERVICE_URL="https://bridge.bali-52-op.dev.polygon"
 
 # BALI-57
 BALI_NETWORK_57_RPC_URL="<REDACTED>"
