fixed kurtursis version prefix

--- a/.github/workflows/upgrade-agglayer-e2e.yml
+++ b/.github/workflows/upgrade-agglayer-e2e.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Kurtosis (fallback)
         run: |
             set -euxo pipefail
-            KURTOSIS_VERSION="1.1.6"   # or the latest stable
+            KURTOSIS_VERSION="v1.1.6"   # or the latest stable
             curl -L "https://github.com/kurtosis-tech/kurtosis-cli-release-artifacts/releases/download/${KURTOSIS_VERSION}/kurtosis_${KURTOSIS_VERSION}_linux_amd64.tar.gz" -o kurtosis.tar.gz
             tar -xzf kurtosis.tar.gz
             sudo mv kurtosis /usr/local/bin/
