--- a/.github/workflows/upgrade-agglayer-e2e.yml
+++ b/.github/workflows/upgrade-agglayer-e2e.yml
@@ -34,6 +34,7 @@ jobs:
       SP1_NETWORK_KEY:       ${{ inputs.SP1_NETWORK_KEY       || secrets.SP1_NETWORK_KEY }}
       DOCKER_USERNAME:       ${{ secrets.DOCKER_USERNAME || '' }}
       DOCKER_TOKEN:          ${{ secrets.DOCKER_TOKEN || '' }}
+      POLYCLI_VERSION:       v0.1.84
 
     steps:
       - name: Checkout
